# qfinance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: methodology.md  references.md
notebooks/: 01_factor_model_demo.ipynb
scripts/: smoke_test.py
tapt/: __init__.py
tapt/analytics/: __init__.py
tapt/backtest/: __init__.py
tapt/data/: __init__.py  cache.py  loaders.py  point_in_time.py
tapt/factors/: __init__.py  model.py  regression.py
tapt/harvesting/: __init__.py
tapt/optimization/: __init__.py
tapt/tax/: __init__.py
tests/: conftest.py  test_cache.py  test_data_loaders.py  test_factor_model.py  test_point_in_time.py  test_regression.py
